fix: align text to the center on landing Resolves #37

--- a/sass/account/page.module.sass
+++ b/sass/account/page.module.sass
@@ -207,6 +207,7 @@ div.content
                         cursor: pointer
                         transition-duration: .2s
                         text-decoration: none
+                        text-align: center
                         @media screen and (max-width: 950px)
                             font-size: 14px
                             margin: 3px 0
